--- a/environment.yml
+++ b/environment.yml
@@ -1,109 +1,108 @@
 name: astrods
 
 channels:
-- conda-forge
-- pytorch
+  - conda-forge
+  - pytorch
 
 dependencies:
-- python=3.11.*
-- jupyter-server-proxy>=4.3
-# A linux desktop environment
-- websockify
-- numpy==1.26.4
-- numexpr>=2.8.7
-- matplotlib==3.9.*
-- graphviz>=2.50.0
-- psycopg2==2.9.*
-- pytorch
-- torchvision
-- pytorch-lightning
-- cartopy
-- pandas>=2.2.2
-- protobuf
-- jupysql
-- mpich
-- mpi4py
-- mkl
-- mkl-service
-- netcdf4>=1.6
-- scikit-learn==1.5.*
-- scikit-image==0.24.*
-- scipy==1.14.*
-- tensorflow-cpu==2.17.0
-- tensorflow==2.17.0
-- cudatoolkit
-- jax>=0.4.31
-- jaxlib>=0.4.31
-- cython==3.0.11
-- sqlite==3.46.0
-- pip
+  # Items required for basic level functionality
+  - gh-scoped-creds==4.1
+  - git==2.47.1
+  - jupyter-archive==3.4.0
+  - jupyter-resource-usage==1.1.0  
+  - jupyter-server-proxy==4.4.0
+  - jupyter_server==2.15.0 
+  - jupyterhub==5.2.1
+  - jupyterlab==4.3.4
+  - jupyterlab-git==0.50.2
+  - jupyterlab_rise==0.43.1
+  - jupytext==1.16.6
+  - nbgitpuller==1.2.1
+  - notebook==7.3.2
+  - pip==24.3.1  
+  - python==3.11.*
 
-- pip:
-  - -r infra-requirements.txt
-  - opencv-python>=4.5.5.62
-  - nose2>=0.10.0
-  - sympy
-  - beautifulsoup4
-  - tqdm
-  - corner==2.2.*
-  - dask>=2024.8.1 
-  - dask-ml>=2024.4.4
-  - distributed>=2024.8.1
-  - SQLAlchemy>=2.0.32 
-  - xarray>=2024.7.0
-  - nltk>=3.9.1
-  - seaborn>=0.13.2
-  - bqplot>=0.12.43
-  - astroquery>=0.4.7
-  - astropy>=6.1.2
-  - dustmaps>=1.0.13
-  - pyvo>=1.5.2
+  # A linux desktop environment
+  - aiohttp==3.11.11
+  - altair==5.5.0
+  - astroquery==0.4.7
+  - astropy==7.0.0
+  - autopep8==2.3.2
+  - beautifulsoup4==4.12.3
+  - bqplot==0.12.43
+  - cartopy==0.23.0
+  - click==8.1.8
+  - corner==2.2.3
+  - cython==3.0.11
+  - dask==2024.12.1
+  - dask-ml==2024.4.4
+  - distributed==2024.12.1
+  - dustmaps==1.0.13
+  - fire==0.7.0
+  - flake8==7.1.1
+  - flask==3.1.0
+  - gensim==4.3.3
+  - graphviz==12.0.0
+  - ipycanvas==0.13.3
+  - ipyparallel==9.0.0
+  - ipython==8.31.0
+  - ipyvolume==0.6.3
+  - ipywidgets==8.1.5
   - joblib==1.4.2
-  - pymc>=5.16.2
-  - requests>=2.32.3
-  - ipycanvas
-  - altair>=5.4.0
-  - vega3>=0.13.0
-  - pytz>=2024.1
-  - lightkurve
-  - ipyparallel
-  - line_profiler>=4.1.3
-  - snakeviz>=2.2.0
-  - memory_profiler>=0.61.0
-  - flask>=3.0.3
-  - stsci.tools>=4.1.0
-  - gensim>=4.3.3
-  - tweet-preprocessor
-  - pyLDAvis==3.4.1
-  - umap-learn>=0.5.6
-  - pydot>=3.0.1
-  - TPOT>=0.12.2
-  - tables>=3.10.1
-  - aiohttp>=3.10.4
-  - watermark
-  - autopep8
-  - vega_datasets
-  - vega
-  - pandas-bokeh
-  - pythreejs
-  - ipywidgets
-  - ipyvolume
-  - urllib3
-  - six
-  - ipython
-  - notebook
-  - click
-  - fire
-  - pycodestyle
-  - flake8
-  - tdtax>=0.1.6
-#  - nb_black
-  - pycodestyle_magic
-  - twine
-  - otter-grader>=3.1.4
-  # for notebook exporting
-  - nbconvert[webpdf]
-  - nb2pdf==0.6.2
-  - nbpdfexport==0.2.1
-  - pytest-notebook==0.8.1
-  - jupyter-tensorboard>=0.2.0
+  - jupysql==0.10.12
+  - lightkurve==2.5.0
+  - line_profiler==4.1.3
+  - matplotlib==3.9.2
+  - memory_profiler==0.61.0
+  - mpi4py==4.0.0
+  - mpich==4.2.2
+  - nltk==3.9.1
+  - numpy==1.26.4
+  - pandas==2.2.2
+  - pandas-bokeh==0.5.5
+  - protobuf==4.25.3
+  - pycodestyle==2.12.1
+  - pydot==3.0.3
+  - pyldavis==3.4.1
+  - pymc==5.20.0
+  - pytest-notebook==0.10.0
+  - pythreejs==2.4.2
+  - pytorch==2.4.0
+  - pytorch-lightning==2.4.0
+  - pytz==2024.2
+  - pyvo==1.6
+  - requests==2.32.3
+  - scikit-image==0.24.0
+  - scikit-learn==1.5.1
+  - scipy==1.13.1
+  - seaborn==0.13.2
+  - six==1.17.0
+  - snakeviz==2.2.0
+  - sqlalchemy==2.0.37 
+  - torchvision=0.19.0
+  - tpot==0.12.2
+  - tqdm==4.67.1
+  - twine==6.0.1
+  - umap-learn==0.5.7
+  - urllib3==2.3.0
+  - vega_datasets==0.9.0
+  - watermark==2.5.0
+  - xarray==2025.1.1
+
+# pip packages, conda preferred check https://anaconda.org/search first!
+  - pip:
+    # required for basic functionality
+    - nb2pdf==0.6.2
+    - nbconvert[webpdf]==7.16.5
+    - nbpdfexport==0.2.1
+    - otter-grader==6.0.4
+
+    # other packages
+    - opencv-python==4.10.0.84
+    - pycodestyle_magic==0.5
+    - stsci.tools==4.1.1
+    - tables==3.10.1
+    - tdtax==0.1.6
+    - tweet-preprocessor==0.6.0
+    - vega==2.6.0
+    - vega3==0.13.0
